# Masters-Research

./: .gitignore  CMakeLists.txt  README.md  TODO  main.cpp  notes.yaml  notes2.yaml  parameter.h  toy.json
json/: JSON_checker.cpp  json.cpp  json.h  test.cpp
sims/: fs_hamiliton.json   fs_prandtl.json
sims/fs/: data.json  readme  seed_b0.1_eb0.5.json  seed_b0.1_eb3.json  seed_b0.2_eb3.json  seed_b0.2_eb9.json  seed_b0.5_eb10.json  seed_b0.5_eb6.json  seed_b10_eb1.json  seed_b10_eb3.json  seed_b1_eb6.json  seed_b2_eb6.json  seed_b5_eb3.json  vis_b0.1_eb0.5.yaml  vis_b0.1_eb3.yaml  vis_b0.2_eb3.yaml  vis_b0.2_eb9.yaml  vis_b0.5_eb10.yaml  vis_b0.5_eb6.yaml  vis_b10_eb1.yaml  vis_b10_eb3.yaml  vis_b1_eb6.yaml  vis_b2_eb6.yaml  vis_b5_eb3.yaml
sims/legacy/: fs_euclid.json  fs_green.json  fs_helmholtz.json
sims/many/: seed.json  seed_g1000.json
sims/n0/: seed_scount32_oscount100.json
sims/n32/: seed2_eb0.1_et0.1.json  seed2_et0.1.json  seed_eb0.1_et0.1.json  seed_eb0.1_et0.1_e0.1.json  seed_et10.json  seed_g1000.json  seed_p10_oscount0.json
sims/n96/: seed2_b1000.json  seed_b10.json  seed_b100.json  seed_eb0.1.json  seed_g1000.json
sims/n96m10/: seed_b100.json  seed_et0.1.json
sims/n96m5/: seed_b3.5.json  seed_b5_e10.json
sims/push/: seed_2.json
src/: Makefile  dorpi.cu  dorpi.h  euler.cu  euler.h  force.cu  force.h  main.cu  parameter.h
src/bepp/: Makefile  defs.h  force.cu  force.h  out.txt  (+6 more)
vis/: animate_tube.py  batch_static.py  dynamic_tube.py  fs_grid.py  helper.py  lennard_jones.py  pull_grid.py  push_grid.py  static_tube.py  test.py  test.yaml
(+303 files in other folders)
